--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,13 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/martinasladek/convenr
 BugReports: https://github.com/martinasladek/convenr/issues
+Imports: 
+    dplyr,
+    httr,
+    jsonlite,
+    purrr,
+    rcanvas,
+    shiny,
+    shinydashboard,
+    tidyr
+Remotes: daranzolin/rcanvas  
