Add functions to get and compile Canvas data

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,7 @@ Imports:
     httr,
     jsonlite,
     purrr,
-    rcanvas,
     shiny,
     shinydashboard,
-    tidyr
+    usethis
 Remotes: daranzolin/rcanvas  
